Fixed Readme formatting

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-**Note**: Rename `1.htaccess` to `.htaccess` to make the redirects work.
+h4. Note
+
+Rename `1.htaccess` to `.htaccess` to make the redirects work.
