--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-h4. Note
+h2. Note
 
-Rename `1.htaccess` to `.htaccess` to make the redirects work.
+Rename <code>1.htaccess</code> to <code>.htaccess</code> to make the redirects work.
